--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb+srv://mario:test1234@mernapp.ad5fpaw.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://guy33liba:g33g33g33@workout.6vzljfv.mongodb.net/?retryWrites=true&w=majority&appName=workout
 SECRET=ninjadojoshifuyoshimarioluigipeachbowser
